# job_search

./: .gitignore  README.md  main.py  mcp_server.py  pyproject.toml  test.py
src/: main.py
src/apache/: apache-dag.py  job_scraping.py
src/data_structures/: ScraperConfig.py
src/scrapers/: JobsScraper.py  JsearchScraper.py  LinkedInScraper.py
src/scrapper/: JobData.py  LinkedIn-scrapper.py  LinkedInScrapper.py
src/tools/: database_access.py  job_relevancy.py  llm_query.py
