[project]
name = "embed-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "bs4>=0.0.2",
    "linkedin-jobs-scraper>=5.0.2",
    "loguru>=0.7.3",
    "mcp>=1.21.0",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
